paid/force-app/main/default/objects/PAID_Base_Query_Fields__mdt/PAID_Base_Query_Fields__mdt.object-meta.xml
<CustomObject>
    <label>PAID Base Query Fields</label>
    <pluralLabel>PAID Base Query Fields</pluralLabel>
</CustomObject>