paid/force-app/main/default/objects/PAID_Base_Query_Fields__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable this config</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>