paid/force-app/main/default/objects/PAID_Base_Query_Fields__mdt/fields/Base_Fields__c.field-meta.xml
<CustomField>
    <fullName>Base_Fields__c</fullName>
    <description>Comma-separated required fields</description>
    <label>Base Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>