paid/force-app/main/default/objects/PAID_Base_Query_Fields__mdt/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>Integration identifier</description>
    <label>Integration Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>