paid/force-app/main/default/objects/PAID_Base_Query_Fields__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Salesforce object (e.g., Account, Contact)</description>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>